feat: implement resource ownership validation